# transcribe-engine

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: context-pack.md  how.md  what.md  why.md
samples/starter-pack/: glossary.md  meeting-prompt.md  participants.md  transcribe.config.yaml
transcribe_engine/: __init__.py  asr.py  cli.py  context.py  pipeline.py  preprocess.py  prompts.py  refine.py
