[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe-engine"
version = "0.1.0"
description = "Multi-pass transcription with a growing context anchor for recurring meetings."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "JohnTran-123" }]
requires-python = ">=3.9"
keywords = ["transcription", "asr", "speech-to-text", "gemini", "meetings", "llm", "context-injection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Office/Business",
]
dependencies = [
    "google-genai>=0.3.0",
    "pyyaml>=6.0",
    "imageio-ffmpeg>=0.4.9",
]

[project.optional-dependencies]
preprocess = [
    "noisereduce>=3.0",
    "soundfile>=0.12",
    "scipy>=1.10",
    "numpy>=1.24",
]
all = [
    "noisereduce>=3.0",
    "soundfile>=0.12",
    "scipy>=1.10",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/JohnTran-123/transcribe-engine"
Repository = "https://github.com/JohnTran-123/transcribe-engine"
Issues = "https://github.com/JohnTran-123/transcribe-engine/issues"

[project.scripts]
transcribe-engine = "transcribe_engine.cli:main"

[tool.setuptools.packages.find]
include = ["transcribe_engine*"]
